Ready for Vercel deployment - Next.js portfolio with MongoDB integration, updated photo, modern skills section

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": ".next/standalone",
     "ignore": [
       "firebase.json",
       "**/.*",
