--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "portfolio-react",
+  "name": "portfolio-nextjs",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "build:firebase": "node build-firebase.js",
+    "deploy:firebase": "npm run build:firebase && firebase deploy",
+    "deploy:vercel": "vercel --prod"
+  },
   "dependencies": {
     "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.28",
+    "mongodb": "^7.0.0",
+    "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.1.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
